--- a/App/project.properties
+++ b/App/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../../day03/google_market74/XUtilsLibrary
-android.library.reference.2=../../../../day01/Day01代码/google_market74/android-support-v7-appcompat
+android.library.reference.1=../../../../Users/hsssf/Desktop/Android/电子市场/day43_谷歌电子市场06/google_market74/android-support-v7-appcompat
+android.library.reference.2=../../../../Users/hsssf/Desktop/Android/电子市场/day43_谷歌电子市场06/google_market74/XUtilsLibrary
